feat(dockerfile, swagger, BFS multiple paths): refactor Dockerfile for smaller size, updated BFS to return multiple paths, updated README
